--- a/nagne/src/App.css
+++ b/nagne/src/App.css
@@ -41,6 +41,7 @@ a {
 .header {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
@@ -141,12 +142,92 @@ a {
 /* main */
 .main {
   width: 100vw;
-  height: 100vh;
-  background-color: red;
-  transition: 300ms all;
+  height: 2000px;
+  display: flex;
+  justify-content: center;
+  overflow-y: scroll;
+}
+
+.main-container {
+  width: 1280px;
+  height: 2000px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.bookmark {
+  width: 100%;
+  height: 360px;
+  border: 2px solid var(--ssafy-blue);
+  border-radius: 20px;
+  margin: 30px 0px 15px 0px;
+}
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 20px;
+}
+
+.content {
+  width: 880px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.write-article-box {
+  width: 100%;
+  height: 80px;
+  background-color: #eeeeee;
+  border-radius: 15px;
+}
+
+.article-container {
+  width: 100%;
+  height: 100%;
+  background-color: #eeeeee;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.side {
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.side-weather {
+  width: 100%;
+  height: 160px;
+  background-color: #eeeeee;
+  border-radius: 15px;
+}
+
+.side-notice {
+  width: 100%;
+  height: 160px;
+  background-color: #eeeeee;
+  border-radius: 15px;
+}
+
+.side-bestarticle {
+  width: 100%;
+  height: 720px;
+  background-color: #eeeeee;
+  border-radius: 15px;
+}
+
+.side-footer {
+  width: 100%;
+  height: 400px;
+  border-radius: 15px;
+  background-color: #eeeeee;
 }
 
 /* resposive - 1150px */
+/* 반응형 - 1100px */
 @keyframes slideDown {
   0% {
     transform: translateY(-40%);
