--- a/nagne/src/App.css
+++ b/nagne/src/App.css
@@ -46,16 +46,18 @@ a {
 }
 
 .navbar {
-  max-width: 1440px;
+  max-width: 1280px;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0px 5px 0px 5px;
+  margin: 10px 0px 5px 0px;
 }
 
 .navbar-logo {
   display: flex;
-  margin: 10px 0px 15px 15px;
+  margin: 10px 0px 15px 0px;
   justify-content: center;
   align-items: center;
 }
@@ -106,7 +108,6 @@ a {
   justify-content: space-between;
   align-items: center;
   gap: 15px;
-  margin-right: 15px;
 }
 .navbar-icons-wrapper {
   background-color: white;
@@ -139,53 +140,63 @@ a {
   display: none;
 }
 
+.search-menu {
+  display: none;
+}
+
 /* main */
 .main {
-  width: 100vw;
-  height: 2000px;
+  width: 100%;
   display: flex;
   justify-content: center;
-  overflow-y: scroll;
 }
 
 .main-container {
-  width: 1280px;
-  height: 2000px;
+  height: 3000px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
 }
 
 .bookmark {
+  max-width: 1280px;
   width: 100%;
   height: 360px;
   border: 2px solid var(--ssafy-blue);
   border-radius: 20px;
-  margin: 30px 0px 15px 0px;
+  margin: 10px 0px 15px 0px;
 }
+
 .wrapper {
   width: 100%;
   height: 100%;
   display: flex;
   gap: 20px;
+  justify-content: center;
 }
 
 .content {
-  width: 880px;
+  max-width: 880px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
 .write-article-box {
-  width: 100%;
+  width: 880px;
   height: 80px;
   background-color: #eeeeee;
   border-radius: 15px;
 }
 
+.content-icons-section{
+  display: none;
+}
+
 .article-container {
-  width: 100%;
+  width: 880px;
   height: 100%;
   background-color: #eeeeee;
   border-radius: 15px 15px 0px 0px;
@@ -193,6 +204,7 @@ a {
 
 .side {
   width: 380px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -226,8 +238,6 @@ a {
   background-color: #eeeeee;
 }
 
-/* resposive - 1150px */
-/* 반응형 - 1100px */
 @keyframes slideDown {
   0% {
     transform: translateY(-40%);
@@ -244,7 +254,81 @@ a {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
+  .main {
+    width: 100%;
+  }
+
+  .main-container {
+    max-width: 880px;
+    width: 80%;
+    height: 3000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .bookmark {
+    width: 100%;
+    max-width: 880px;
+    height: 25vw;
+    border: 2px solid var(--ssafy-blue);
+    border-radius: 20px;
+    margin: 10px 0px 15px 0px;
+  }
+
+  .wrapper {
+    max-width: 880px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .content-icons-section {
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
+  .icons-section-icon {
+    display: flex;
+    width: 90px;
+    height: 90px;
+    background-color: rgb(195, 254, 254);
+    border-radius: 25px;
+  }
+
+  .write-article-box {
+    display: none;
+  }
+
+  .article-container {
+    width: 100%;
+  }
+
+  .side {
+    display: none;
+  }
+
+  /* header */
+
+  .header {
+    width: 100%;
+  }
+  .navbar {
+    max-width: 880px;
+    width: 80%;
+  }
+
   .navbar-menu {
     display: none;
   }
@@ -252,6 +336,7 @@ a {
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    
     height: 100%;
     justify-content: flex-end;
     align-items: center;
@@ -305,6 +390,33 @@ a {
   }
 
   .off-display {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .navbar {
+    width: 100%;
+  }
+
+  .main{
+    width: 100%;
+  }
+  .main-container {
+    width: 100%;
+    padding: 0px 10px 0px 10px;
+  }
+}
+@media screen and (max-width:560px){
+  .navbar-icons {
+    display: none;
+  }
+
+  .bookmark {
+    display: none;
+  }
+
+  .content-icons-section {
     display: none;
   }
 }
